Fix SonarCloud findings and a spotless regression on this PR
- Reformatted StudyRepository.java (the prior Copilot Autofix commit
  that dropped the @Cacheable from getStudyPermissions() -- correctly,
  since CancerStudyPermissionCache already owns caching for it, and
  keeping both meant the outer forever-TTL cache made the inner
  short-TTL one pointless -- left a spotless violation).
- Constructor injection instead of field injection for the fields this
  PR added (CancerStudyPermissionCache.cacheMapBuilder,
  StaticRefCacheMapUtil/SpringManagedCacheMapUtil.cancerStudyPermissionCache).
- CancerStudyPermissionCache now wraps the built map in
  Collections.unmodifiableMap(), since a bare volatile reference to a
  mutable Map doesn't actually make it safe to share across threads.
- SLF4J placeholder logging instead of string concatenation in
  CacheMapBuilder/CancerStudyPermissionEvaluator.
- Stream.toList() instead of .collect(Collectors.toList()), and
  removed a redundant switch-arm block, in CancerStudyPermissionEvaluator.
- Removed 4 commented-out assertion lines and one unnecessary
  `throws Exception` in StudyMyBatisRepositoryTest.

All 1422 tests pass; spotless clean.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01S4sZFsa98Tohpsr1ajdW9k